--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
     grid-template-columns: 100px 100px 100px 100px 100px;
 }
 
+.type-1{
+    grid-column: 1;
+}
+
+.type-2{
+    grid-column: 2;
+}
+
 #search_results{
     max-height: 100px;
     width: 300px;
