--- a/style.css
+++ b/style.css
@@ -3,7 +3,15 @@
 #pokemon_info{
     display: grid;
 
+    max-width: max-content;
+
     grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
+
+    background-color: red;
+}
+
+.header{
+    background-color: white;
 }
 
 .pokemon-name{
