--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
     max-width: max-content;
 
-    grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
+    grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px;
 
     background-color: red;
 }
