--- a/style.css
+++ b/style.css
@@ -30,6 +30,14 @@
     grid-column: 4;
 }
 
+.evolution-stage{
+    grid-column: 5;
+}
+
+.fully-evolved{
+    grid-column: 6;
+}
+
 #search_results{
     max-height: 100px;
     width: 300px;
