--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ html, body{
     margin: 0;
 }
 
+h1{
+    padding: 0;
+    margin: 0;
+}
+
 #play_dialog::backdrop{
     background-color: black;
     opacity: 0.75;
@@ -104,7 +109,8 @@ html, body{
 
 #search_contents{
     position: relative;
-    padding-bottom: 50px;
+
+    padding-bottom: 20px;
 }
 
 #search{
