--- a/style.css
+++ b/style.css
@@ -131,6 +131,11 @@ h1{
     position: absolute;
 }
 
-#search_results > * {
-    border: 1px solid black;
+.search-result{
+    border-bottom: 1px solid black;
+}
+
+.search-result:hover{
+    background-color: rgb(150, 150, 150);
+    cursor: pointer;
 }
