--- a/style.css
+++ b/style.css
@@ -79,8 +79,19 @@ h2{
     border: 1px solid white;
 }
 
+#pokemon_info > *{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 18px;
+}
+
 .header{
     background-color: var(--bg-color);
+
+    font-size: 20px;
 }
 
 .pokemon-name{
